--- a/index.html
+++ b/index.html
@@ -11,26 +11,34 @@
             margin: 0;
             padding: 0;
             color: #333;
+            scroll-behavior: smooth;
+        }
+        header {
+            background-color: #0468b3;
+            color: white;
+            padding: 20px 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+            text-align: center;
         }
         .container {
             width: 80%;
             margin: auto;
             padding: 20px;
-        }
-        header {
-            text-align: center;
-            padding: 50px 0;
-        }
-        header h1 {
-            color: #0468b3;
-            font-size: 3em;
+            margin-top: 80px; /* adjust for fixed header */
         }
         .hero {
-            background-color: #09c169;
+            background: url('https://via.placeholder.com/1500x500') no-repeat center center/cover;
             color: white;
             text-align: center;
-            padding: 50px 20px;
-            border-radius: 10px;
+            padding: 150px 20px;
         }
         .hero h2 {
             font-size: 2.5em;
@@ -50,6 +58,10 @@
             width: 30%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            transition: transform 0.3s ease-in-out;
+        }
+        .feature:hover {
+            transform: scale(1.05);
         }
         .feature h3 {
             color: #0468b3;
@@ -61,11 +73,46 @@
         .contact h2 {
             color: #0468b3;
         }
+        .contact form {
+            max-width: 600px;
+            margin: auto;
+        }
+        .contact form input,
+        .contact form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .contact form button {
+            background-color: #09c169;
+            color: white;
+            border: none;
+            padding: 15px 20px;
+            font-size: 1em;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .contact form button:hover {
+            background-color: #0468b3;
+        }
         footer {
             text-align: center;
             padding: 20px 0;
             background-color: #0468b3;
             color: white;
+        }
+        .social-icons a {
+            margin: 0 10px;
+            color: white;
+            text-decoration: none;
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+        .social-icons a:hover {
+            color: #09c169;
         }
     </style>
 </head>
@@ -95,11 +142,19 @@
     </div>
     <div class="contact">
         <h2>Entre em Contato</h2>
-        <p>Interessado em nossos serviços? Entre em contato conosco para mais informações.</p>
-        <p>Email: contato@lavafacil.com</p>
-        <p>Telefone: (11) 1234-5678</p>
+        <form>
+            <input type="text" name="name" placeholder="Seu Nome" required>
+            <input type="email" name="email" placeholder="Seu Email" required>
+            <textarea name="message" rows="5" placeholder="Sua Mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
     </div>
     <footer>
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+        </div>
         <p>&copy; 2024 LavaFácil. Todos os direitos reservados.</p>
     </footer>
 </body>
