--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         <h1>LavaFácil</h1>
     </header>
     <div class="hero">
-        <video autoplay muted loop>
-            <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+        <video autoplay muted loop playsinline>
+            <source src="https://ak.picdn.net/shutterstock/videos/1052719060/preview/stock-footage-close-up-man-washing-wheels-of-red-car-in-carwash-on-high-pressure-water.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
