--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </header>
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="https://ak.picdn.net/shutterstock/videos/1052719060/preview/stock-footage-close-up-man-washing-wheels-of-red-car-in-carwash-on-high-pressure-water.mp4" type="video/mp4">
+            <source src="https://storage.googleapis.com/coverr-main/mp4/cleaning-car.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
