--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </header>
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="https://storage.googleapis.com/coverr-main/mp4/cleaning-car.mp4" type="video/mp4">
+            <source src="https://www.pexels.com/video/man-doing-a-car-wash-4849132/" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
