--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </header>
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="https://www.pexels.com/video/close-up-of-cleaning-car-13643113/" type="video/mp4">
+            <source src="https://www.shutterstock.com/video/clip-1108389085-young-man-cap-using-hose-pressurized-water" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
