--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            object-position: center 30%; /* Ajusta a posição vertical do vídeo */
             transform: translate(-50%, -50%);
+            z-index: -1;
+        }
+        .hero-content {
+            position: relative;
+            z-index: 1;
+        }
+        .hero-content::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
             z-index: -1;
         }
         .hero h2 {
