--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </header>
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="https://www.shutterstock.com/video/clip-1108389085-young-man-cap-using-hose-pressurized-water">
+            <source src="https://ak.picdn.net/shutterstock/video/clip-1108389085-young-man-cap-using-hose-pressurized-water">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
