--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
         .social-icons a:hover {
             color: #09c169;
         }
+        .whatsapp-button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #25d366;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.2em;
+            transition: background-color 0.3s;
+        }
+        .whatsapp-button:hover {
+            background-color: #1da851;
+        }
     </style>
 </head>
 <body>
@@ -151,12 +165,13 @@
     </header>
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="https://ak.picdn.net/shutterstock/video/clip-1108389085-young-man-cap-using-hose-pressurized-water">
+            <source src="https://ak.picdn.net/shutterstock/videos/1100647633/preview/stock-footage-young-man-cap-using-hose-pressurized-water-jet-in-car-wash-video-footage.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
         <div class="hero-content">
             <h2>Serviço de Lavação Self-Service</h2>
-            <p>Descubra a praticidade e a eficiência de nosso totem de lavação self-service, disponibilizado como comodato para facilitar sua vida.</p>
+            <p>Descubra a praticidade e a eficiência de nosso totem de lavação self-service, que facilita sua vida com inovação e conforto em sua casa.</p>
+            <a class="whatsapp-button" href="https://wa.me/SeuNumeroDeWhatsapp" target="_blank">Fale Conosco pelo WhatsApp</a>
         </div>
     </div>
     <div class="container">
@@ -170,8 +185,8 @@
                 <p>Economize tempo e dinheiro com nosso serviço self-service.</p>
             </div>
             <div class="feature">
-                <h3>Comodato</h3>
-                <p>Disponibilizamos o totem sem custos adicionais para sua empresa.</p>
+                <h3>Inovação</h3>
+                <p>Uma solução inovadora que traz comodidade e eficiência para você.</p>
             </div>
         </div>
     </div>
@@ -190,7 +205,7 @@
             <a href="https://twitter.com" target="_blank">Twitter</a>
             <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
-        <p>&copy; 2024 LavaFácil. Todos os direitos reservados.</p>
+        <p>&copy; 2023 LavaFácil. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
