--- a/index.html
+++ b/index.html
@@ -43,17 +43,9 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
-        }
-        .hero video {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center 30%; /* Ajusta a posição vertical do vídeo */
-            transform: translate(-50%, -50%);
-            z-index: -1;
+            background-image: url('https://example.com/path-to-your-image.jpg'); /* Substitua com o URL da sua imagem */
+            background-size: cover;
+            background-position: center;
         }
         .hero-content {
             position: relative;
@@ -164,10 +156,6 @@
         <h1>LavaFácil</h1>
     </header>
     <div class="hero">
-        <video autoplay muted loop playsinline>
-            <source src="https://ak.picdn.net/shutterstock/videos/1100647633/preview/stock-footage-young-man-cap-using-hose-pressurized-water-jet-in-car-wash-video-footage.mp4" type="video/mp4">
-            Seu navegador não suporta o elemento de vídeo.
-        </video>
         <div class="hero-content">
             <h2>Serviço de Lavação Self-Service</h2>
             <p>Descubra a praticidade e a eficiência de nosso totem de lavação self-service, que facilita sua vida com inovação e conforto em sua casa.</p>
