--- a/index.html
+++ b/index.html
@@ -42,24 +42,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
-            background-image: url('https://example.com/path-to-your-image.jpg'); /* Substitua com o URL da sua imagem */
+            background-image: url('https://www.your-image-url.com'); /* Substitua com o URL da sua imagem */
             background-size: cover;
             background-position: center;
         }
         .hero-content {
-            position: relative;
-            z-index: 1;
-        }
-        .hero-content::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
             background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semi-transparente */
-            z-index: -1;
+            padding: 20px;
+            border-radius: 10px;
         }
         .hero h2 {
             font-size: 2.5em;
