--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image: url('https://www.shutterstock.com/shutterstock/videos/1108389085/thumb/1.jpg'); /* Substitua com o URL da sua imagem */
+            background-image: url('https://media.istockphoto.com/id/1417974644/pt/foto/a-man-washes-his-car-at-a-self-service-car-wash-using-a-hose-with-pressurized-water.jpg?s=1024x1024&w=is&k=20&c=1TBguIW7_YQkU31CXXyP5_wvLIvRVsEN0BXvd2MjiK4='); /* Substitua com o URL da sua imagem */
             background-size: cover;
             background-position: center;
         }
