--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
         .hero {
             position: relative;
-            height: 430px;
+            height: 100vh;
             color: white;
             text-align: center;
             display: flex;
