--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>LavaFácil - Self-Service</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+ @media only screen and (max-width: 768px) {
+            .hero {
+                background-position: center;
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f4f3f8;
